--- a/index.html
+++ b/index.html
@@ -3,296 +3,155 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JokerLudo - Best Ludo WhatsApp Group Links | Earn Money Playing Ludo</title>
-
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. JokerLudo is your #1 Ludo King group link hub." />
-  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
-  <meta name="author" content="JokerLudo Group" />
-  <meta name="robots" content="index, follow" />
-  
-  <!-- ✅ Google AdSense Code -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
-     crossorigin="anonymous"></script>
-
-  <!-- Favicon -->
-  <link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
-  
-  <!-- Google Site Verification -->
-  <meta name="google-site-verification" content="google-site-verification-code-here" />
-
-  <!-- Google Analytics (G-EZF7SRX6EJ) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){ dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-EZF7SRX6EJ');
-  </script>
-
-  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
-  <meta property="og:title" content="JokerLudo - Trusted Ludo WhatsApp Groups" />
-  <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with JokerLudo!" />
-  <meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
-  <meta property="og:url" content="https://ludogrouplink.com/" />
-  <meta property="og:type" content="website" />
-
-  <!-- Twitter Cards -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="JokerLudo - Earn Real Money in Ludo" />
-  <meta name="twitter:description" content="Join JokerLudo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
-  <meta name="twitter:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
-
-  <!-- Schema.org JSON-LD -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "JokerLudo Group",
-    "url": "https://ludogrouplink.com",
-    "logo": "https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg",
-    "sameAs": [
-      "https://www.facebook.com/JokerLudo",
-      "https://www.instagram.com/JokerLudo"
-    ]
-  }
-  </script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: #f4f5ff;
-      color: #333;
-    }
-    .navbar {
-      background: #2d2e52;
-      padding: 20px;
-      text-align: center;
-    }
-    .logo-img {
-      width: 100px;
-      height: auto;
-      border-radius: 8px;
-      margin-bottom: 10px;
-    }
-    .navbar h1 {
-      color: #fff;
-      font-size: 24px;
-      margin-top: 5px;
-    }
-    .nav-links {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 15px;
-      margin-top: 10px;
-    }
-    .nav-links a {
-      color: #fff;
-      text-decoration: none;
-      padding: 8px 14px;
-      border-radius: 6px;
-      transition: 0.3s;
-    }
-    .nav-links a:hover {
-      background: #ffde59;
-      color: #000;
-    }
-    .hero {
-      text-align: center;
-      padding: 50px 20px;
-      background: linear-gradient(to right, #ffe57f, #ffc107);
-    }
-    .hero h1 {
-      font-size: 32px;
-      margin-bottom: 15px;
-    }
-    .hero p {
-      font-size: 18px;
-      margin-bottom: 25px;
-      max-width: 700px;
-      margin: 0 auto 25px auto;
-      line-height: 1.5;
-    }
-    .join-btn {
-      background: #2d2e52;
-      color: #fff;
-      padding: 12px 25px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: 0.3s;
-      display: inline-block;
-    }
-    .join-btn:hover {
-      background: #1a1a3a;
-      transform: scale(1.05);
-    }
-    .features {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      padding: 40px 20px;
-    }
-    .card, .group-card {
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-      width: 280px;
-      text-align: center;
-    }
-    footer {
-      background: #2d2e52;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-    .footer-links {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 15px;
-      margin-bottom: 10px;
-    }
-    .footer-links a {
-      color: #fff;
-      text-decoration: none;
-    }
-    .footer-links a:hover {
-      color: #ffde59;
-    }
-    .seo-text {
-      max-width: 800px;
-      margin: 20px auto;
-      padding: 0 20px;
-      color: #555;
-      font-size: 16px;
-      line-height: 1.6;
-      text-align: center;
-    }
-    @media(max-width: 768px) {
-      .features { flex-direction: column; }
-    }
-  </style>
+  <meta name="title" content="BetLinkHub - Join Trusted Betting WhatsApp Groups">
+  <meta name="description" content="Join trusted and verified betting WhatsApp groups for Cricket, Football, Casino, Teen Patti, Poker & Fantasy League. Get expert tips, predictions, and earn safely.">
+  <meta name="keywords" content="Betting WhatsApp Group, Cricket Betting Tips, Football Predictions, Casino Strategies, Teen Patti Tips, Poker WhatsApp Group, Fantasy League Tips">
+  <title>BetLinkHub - Trusted Betting WhatsApp Groups</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <nav class="navbar">
-    <img src="WhatsApp Image 2025-07-27 at 10.45.50.jpeg" alt="JokerLudo Logo" class="logo-img">
-    <h1>JokerLudo</h1>
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="rules.html">Rules</a>
-      <a href="join.html">Join Group</a>
-      <a href="addgroup.html">Add Group</a>
-      <a href="contact.html">Contact</a>
-      <a href="privacy.html">Privacy</a>
-    </div>
-  </nav>
+<body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-200">
 
-  <section class="hero">
-    <h1>Join Trusted Ludo WhatsApp Groups!</h1>
-    <p>Make your luck with JokerLudo – India’s trusted Ludo earning platform with free and verified WhatsApp groups, Ludo King tournaments, and instant payouts.</p>
-    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
-    <br><br>
-    <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
-  </section>
+<!-- Header -->
+<header class="py-6 text-center border-b dark:border-gray-700">
+  <h1 class="text-3xl font-bold">BetLinkHub</h1>
+  <p class="mt-2">Join Trusted Betting Groups | Earn with Confidence</p>
+  <button id="darkToggle" class="mt-4 px-4 py-2 bg-blue-600 text-white rounded">Toggle Dark Mode</button>
+</header>
 
-  <section class="features">
-    <div style="flex: 1; min-width: 300px;">
-      <video width="100%" controls muted poster="WhatsApp Image 2025-07-27 at 10.45.50.jpeg">
-        <source src="WhatsApp Video 2025-07-27 at 10.45.49.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
-    <div style="flex: 1; min-width: 300px; padding: 20px;">
-      <h2>🎯 JokerLudo Group Benefits</h2>
-      <ul style="line-height: 1.8; font-size: 16px;">
-        <li>✅ 100% Trusted Admin</li>
-        <li>✅ ₹50 Minimum Withdrawal</li>
-        <li>✅ Fast Payout Support</li>
-        <li>✅ Secure Ludo Matches</li>
-        <li>✅ No Cheating Policy</li>
-        <li>✅ WhatsApp Support: <strong>9670814522</strong></li>
-        <li>⚡ 24/7 Service: Immediate response and daily matches</li>
-        <li>🎯 Trusted Groups: Verified Ludo King and FastWin communities</li>
-        <li>🏆 Earn Real Cash: Participate & withdraw instantly</li>
-      </ul>
-      <br>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
-    </div>
-  </section>
+<!-- Intro -->
+<section class="max-w-4xl mx-auto py-8 px-4 text-center">
+  <h2 class="text-2xl font-semibold mb-4">Join the Most Trusted Betting WhatsApp Groups</h2>
+  <p>
+    BetLinkHub connects you with <strong>verified WhatsApp betting groups</strong> for sports, casino, and card games.  
+    Whether you follow <strong>Cricket, Football, Poker, Teen Patti</strong> or love <strong>Fantasy League</strong> games,  
+    our expert communities share winning tips, match predictions, and earning strategies.
+  </p>
+</section>
 
-  <section class="seo-text">
-    <p>Explore top-rated <strong>Ludo WhatsApp group links</strong> with JokerLudo. We provide the most reliable and high-paying <strong>WhatsApp Ludo groups</strong> for players across India. Get daily match updates, secure transactions, and instant payouts. Whether you're searching for <strong>Ludo King WhatsApp groups</strong>, <strong>FastWin Ludo groups</strong>, or <strong>verified earning Ludo groups</strong>, JokerLudo has you covered.</p>
-  </section>
-
-  <section class="features">
-    <div class="card">
-      <h3>✅ 24x7 Support</h3>
-      <p>Always online to help with fast responses.</p>
+<!-- Groups -->
+<section id="groups" class="py-12 max-w-6xl mx-auto px-4">
+  <h3 class="text-2xl font-bold mb-8 text-center">Available Groups</h3>
+  <div id="groupContainer" class="grid md:grid-cols-3 gap-6">
+    
+    <!-- Cricket -->
+    <div class="p-6 bg-white dark:bg-gray-800 rounded-xl shadow">
+      <img src="https://cdn-icons-png.flaticon.com/512/3097/3097144.png" alt="Cricket" class="w-12 h-12 mb-3">
+      <h4 class="text-xl font-semibold mb-1">[254 Members] Cricket Betting Group</h4>
+      <p class="mb-4">Verified cricket betting tips, live match predictions, and winning strategies for major leagues.</p>
+      <a href="https://wa.me/919670814522" target="_blank" class="px-4 py-2 bg-green-600 text-white rounded">Join Now</a>
     </div>
-    <div class="card">
-      <h3>✅ Instant Withdrawals</h3>
-      <p>Quick payout every time you win.</p>
-    </div>
-    <div class="card">
-      <h3>✅ Trusted Platform</h3>
-      <p>Official Deposit No: <strong>9670814522</strong></p>
-    </div>
-  </section>
 
-  <!-- ASCII Animation Section -->
-  <section class="ascii-animation" style="margin-top: 50px;">
-    <h2 style="text-align:center; margin-bottom: 20px;">💻 Terminal Style ASCII Animation</h2>
-    <div style="background: black; color: #00ff00; font-family: monospace; padding: 20px; border-radius: 10px; max-width: 800px; margin: auto;">
-      <pre id="ascii-animation">Loading animation...</pre>
+    <!-- Football -->
+    <div class="p-6 bg-white dark:bg-gray-800 rounded-xl shadow">
+      <img src="https://cdn-icons-png.flaticon.com/512/1165/1165187.png" alt="Football" class="w-12 h-12 mb-3">
+      <h4 class="text-xl font-semibold mb-1">[189 Members] Football Betting Group</h4>
+      <p class="mb-4">Daily football match insights, expert score predictions, and safe betting guidance.</p>
+      <a href="https://wa.me/919670814522" target="_blank" class="px-4 py-2 bg-green-600 text-white rounded">Join Now</a>
     </div>
-  </section>
 
-  <script>
-    const totalFrames = 5;
-    const framePaths = Array.from({ length: totalFrames }, (_, i) => `frames/frame${i + 1}.txt`);
-    const frameDelay = 200;
-    const animationElement = document.getElementById("ascii-animation");
-    let frames = [];
-    let currentFrame = 0;
+    <!-- Casino -->
+    <div class="p-6 bg-white dark:bg-gray-800 rounded-xl shadow">
+      <img src="https://cdn-icons-png.flaticon.com/512/833/833314.png" alt="Casino" class="w-12 h-12 mb-3">
+      <h4 class="text-xl font-semibold mb-1">[312 Members] Casino Betting Group</h4>
+      <p class="mb-4">Learn safe and proven casino strategies with expert tips to maximize your winnings.</p>
+      <a href="https://wa.me/919670814522" target="_blank" class="px-4 py-2 bg-green-600 text-white rounded">Join Now</a>
+    </div>
 
-    async function loadFrames() {
-      for (const path of framePaths) {
-        try {
-          const response = await fetch(path);
-          const text = await response.text();
-          frames.push(text);
-        } catch (err) {
-          frames.push("Error loading frame.");
-        }
+    <!-- Teen Patti -->
+    <div class="p-6 bg-white dark:bg-gray-800 rounded-xl shadow hidden extraGroup">
+      <img src="https://cdn-icons-png.flaticon.com/512/1086/1086473.png" alt="Teen Patti" class="w-12 h-12 mb-3">
+      <h4 class="text-xl font-semibold mb-1">[276 Members] Teen Patti Pro Group</h4>
+      <p class="mb-4">Exclusive Teen Patti strategies, high-stakes gameplay tips, and winning tricks.</p>
+      <a href="https://wa.me/919670814522" target="_blank" class="px-4 py-2 bg-green-600 text-white rounded">Join Now</a>
+    </div>
+
+    <!-- Poker -->
+    <div class="p-6 bg-white dark:bg-gray-800 rounded-xl shadow hidden extraGroup">
+      <img src="https://cdn-icons-png.flaticon.com/512/2910/2910768.png" alt="Poker" class="w-12 h-12 mb-3">
+      <h4 class="text-xl font-semibold mb-1">[198 Members] Poker Mastermind</h4>
+      <p class="mb-4">Learn winning poker strategies from top-ranked players in our trusted WhatsApp group.</p>
+      <a href="https://wa.me/919670814522" target="_blank" class="px-4 py-2 bg-green-600 text-white rounded">Join Now</a>
+    </div>
+
+    <!-- Fantasy League -->
+    <div class="p-6 bg-white dark:bg-gray-800 rounded-xl shadow hidden extraGroup">
+      <img src="https://cdn-icons-png.flaticon.com/512/2103/2103626.png" alt="Fantasy League" class="w-12 h-12 mb-3">
+      <h4 class="text-xl font-semibold mb-1">[223 Members] Fantasy League Experts</h4>
+      <p class="mb-4">Get expert picks, dream team suggestions, and winning tips for fantasy sports leagues.</p>
+      <a href="https://wa.me/919670814522" target="_blank" class="px-4 py-2 bg-green-600 text-white rounded">Join Now</a>
+    </div>
+  </div>
+
+  <div class="text-center mt-6">
+    <button id="viewAllBtn" class="px-4 py-2 bg-blue-600 text-white rounded">View All</button>
+  </div>
+</section>
+
+<!-- FAQ -->
+<section class="max-w-4xl mx-auto py-12 px-4">
+  <h3 class="text-2xl font-bold mb-6 text-center">Frequently Asked Questions</h3>
+  <div>
+    <h4 class="font-semibold">Are these betting groups safe?</h4>
+    <p class="mb-4">Yes, all groups listed on BetLinkHub are verified and moderated for a safe experience.</p>
+
+    <h4 class="font-semibold">Do I need to pay to join?</h4>
+    <p class="mb-4">Most groups are free, but some premium groups may have a membership fee.</p>
+
+    <h4 class="font-semibold">Can I join multiple groups?</h4>
+    <p>Yes, you can join as many groups as you like depending on your interests.</p>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="py-6 text-center border-t dark:border-gray-700">
+  <p>© 2025 BetLinkHub. All rights reserved.</p>
+</footer>
+
+<!-- Schema Markup -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Are these betting groups safe?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, all groups listed on BetLinkHub are verified and moderated for a safe experience."
       }
-      startAnimation();
+    },
+    {
+      "@type": "Question",
+      "name": "Do I need to pay to join?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Most groups are free, but some premium groups may have a membership fee."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can I join multiple groups?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, you can join as many groups as you like depending on your interests."
+      }
     }
+  ]
+}
+</script>
 
-    function startAnimation() {
-      setInterval(() => {
-        animationElement.textContent = frames[currentFrame];
-        currentFrame = (currentFrame + 1) % frames.length;
-      }, frameDelay);
-    }
+<!-- Script -->
+<script>
+document.getElementById("viewAllBtn").addEventListener("click", function(){
+  document.querySelectorAll(".extraGroup").forEach(g => g.classList.toggle("hidden"));
+  this.textContent = this.textContent === "View All" ? "Show Less" : "View All";
+});
 
-    loadFrames();
-  </script>
+document.getElementById("darkToggle").addEventListener("click", function(){
+  document.documentElement.classList.toggle("dark");
+});
+</script>
 
-  <footer>
-    <div class="footer-links">
-      <a href="index.html">Home</a>
-      <a href="rules.html">Rules</a>
-      <a href="join.html">Join</a>
-      <a href="addgroup.html">Add Group</a>
-      <a href="privacy.html">Privacy</a>
-      <a href="contact.html">Contact</a>
-    </div>
-    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
-  </footer>
 </body>
 </html>
